# inf502-fall2025

./: README.md  inf502-fall2025.code-workspace
Homework 2/: loadData.py  makefile  model.py  pyproject.toml  run_analysis.ipynb  run_analysis.py
Homework 3/: README.md  main.ipynb  pyproject.toml
