[project]
name = "homework-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipykernel>=6.30.1",
    "isort>=6.1.0",
]
